tests/snapshots/keys_interactive__keys_interactive_ctrl_arrows@002.snap
---
source: tests/keys_interactive.rs
description: "input: interactive\noptions: -i --cmd true --cmd-query foo bar foo-bar\nafter:\n  @ctrl Left\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/0                                                                        0/0"
"c> foo bar foo-|bar                                                             "
cursor: (24, 17)
